opam-version : "2.0"
version      : "1.0"
synopsis     : "Red-Black Trees a la Okasaki"
description  : "Red-black trees according to the following classic paper:
                Chris Okasaki, Red-Black Trees in a Functional
                Setting. J. Funct. Program. 9(4): 471-477 (1999)"
authors      : ["Christian Rinderknecht"]
maintainer   : "rinderknecht@free.fr"
homepage     : "https://github.com/rinderknecht/RedBlackTrees"
bug-reports  : "https://github.com/rinderknecht/RedBlackTrees/issues"
dev-repo     : "git+https://github.com/rinderknecht/RedBlackTrees.git"
license      : "MIT"
depends      : ["dune"]
build        : [["dune" "build" "-p" name]]

url {
  src: "https://gitlab.com/rinderknecht/RedBlackTrees/-/archive/master/RedBlackTrees.tar.gz"
}
