(library
  (name RedBlackTrees)
  (public_name RedBlackTrees)
  (wrapped false)
  (modules PolyMap PolySet RedBlack))

(test
 (modules PolyMapMain)
 (libraries RedBlackTrees)
 (name PolyMapMain))

(test
 (modules PolySetMain)
 (libraries RedBlackTrees)
 (name PolySetMain))

(test
 (modules RedBlackMain)
 (libraries RedBlackTrees)
 (name RedBlackMain))
